2006-06-21 [colin]	0.10.1cvs1

	* configure.ac
		Fix missing pthread support

2006-06-12 [paul]	0.10.1

	0.10.1 released

2006-06-12 [paul]	0.10.0cvs4

	* po/Makefile.in.in
		fix autoconf warning

2006-06-12 [paul]	0.10.0cvs3

	* configure.ac
	* po/fr.po
		new translation, submitted by Fabien Vantard <fzzzzz@gmail.com>

2006-06-06 [wwp]	0.10.0cvs2

	* configure.ac
	* src/.cvsignore
	* src/plugin_version.h.in
	* src/gtkhtml2_viewer.c
		fix/unify/simplify autostuff, get rid of src/plugin_version.h{,.in} (use pluginconfig.h instead).

2006-06-03 [wwp]	0.10.0cvs1

	* commitHelper
	* PATCHSETS
	* configure.ac
		introducing commitHelper for plugins too.

2006-04-27 [colin] 	0.10

	* configure.ac
	* po/pl.po
		Polish translation
		Patch by Pawel Pekala.

2006-04-07 [colin] 	0.9

	* configure.ac
		Optionnaly handle --prefix.
		Patch by Pawel Pekala.

2006-04-06 [paul] 0.8

	* src/gtkhtml2_prefs.c
		fix namespace conflict. prefs_page is already 
		used (and non-static) by Dillo plugin.
		Thanks to Colin.

2006-03-16 [colin] 0.7

	* src/gtkhtml2_viewer.c
	* configure.ac
		Load inline images using Content-Location too
		Requires newer SC version

2006-03-15 [wwp] 0.6

	* src/gtkhtml2_viewer.c
		Use a better solution for timeouts (thanks to Colin)

2006-03-15 [colin] 0.5

	* src/gtkhtml2_viewer.c
		Load inline images (attached to the mail).
		Patch by Ivan Rayner <ivanr@sgi.com>

2006-03-14 [wwp] 0.3

	* src/gtkhtml2_viewer.c
		Properly init curl outside of any thread (thanks to Colin)

2006-02-13 [colin] 0.2

	* src/gtkhtml2_viewer.c
		Use correct Mimeview for statusbar
		Specify HTML charset if unspecified