@@ -3,3 +3,4 @@
 ( cvs diff -u -r 1.1.2.15 -r 1.1.2.16 configure.ac;  diff -u /dev/null po/fr.po;  ) > 0.10.0cvs3.patchset
 ( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 po/Makefile.in.in;  ) > 0.10.0cvs4.patchset
 ( cvs diff -u -r 1.1.2.18 -r 1.1.2.19 configure.ac;  ) > 0.10.1cvs1.patchset
+( cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/gtkhtml2_viewer.c;  ) > 0.10.1cvs2.patchset
