@@ -415,7 +415,13 @@ static MimeViewer *gtkhtml2_viewer_create(void)
 	viewer->html_doc = html_document_new();
 	viewer->html_view = html_view_new();
 	viewer->scrollwin = gtk_scrolled_window_new(NULL, NULL);
-	gtk_scrolled_window_set_policy(GTK_SCROLLED_WINDOW(viewer->scrollwin), GTK_POLICY_AUTOMATIC, GTK_POLICY_AUTOMATIC);
+	gtk_scrolled_window_set_policy(
+			GTK_SCROLLED_WINDOW(viewer->scrollwin), 
+			GTK_POLICY_AUTOMATIC, GTK_POLICY_AUTOMATIC);
+
+	gtk_scrolled_window_set_shadow_type(
+			GTK_SCROLLED_WINDOW(viewer->scrollwin),
+			GTK_SHADOW_IN);
 
 	gtk_container_add(
 		GTK_CONTAINER(viewer->scrollwin),
